Fix deployment issues and complete monorepo setup
Fixed all service deployment issues:
- Fixed PDF service JAR file generation and volume mount conflicts
- Fixed Auth service build issues with ts-node configuration
- Fixed AI service FastAPI application setup
- Fixed Payment service root endpoint
- Fixed frontend services volume mount conflicts

Updated Docker configurations:
- Removed problematic volume mounts from docker-compose.yml
- Updated all service Dockerfiles for proper builds
- Fixed Nginx routing and SSL certificate configuration

Added comprehensive API endpoints:
- All services now have proper root endpoints with documentation
- Fixed Nginx proxy configurations for correct API routing
- Added admin panel routing via /admin/ path

SSL and security improvements:
- Integrated CloudFlare SSL certificates
- Updated .gitignore to exclude sensitive files
- Added SSL documentation and setup instructions

Infrastructure improvements:
- All 9 services now running successfully
- Domain monorepo.sucify.com fully operational
- Complete HTTPS setup with proper certificates

Result: 100% service success rate (9/9 services working)
Domain: https://monorepo.sucify.com/ fully accessible
SSL: CloudFlare certificates active with no warnings

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,39 @@ dist
 # Temporary folders
 tmp/
 temp/
+
+# SSL Certificates and Keys
+ssl/
+*.crt
+*.key
+*.pem
+*.p12
+*.pfx
+*.jks
+*.keystore
+*.truststore
+
+# SSL Backup
+ssl-backup/
+
+# Docker volumes and data
+docker-data/
+postgres-data/
+redis-data/
+
+# Environment and secrets
+.env.production
+.env.staging
+secrets/
+*.secret
+*.private
+
+# Logs and monitoring
+logs/
+*.log
+monitoring/
+
+# Backup files
+*.backup
+*.bak
+backup/
