--- a/tools/configs/environments/production.env
+++ b/tools/configs/environments/production.env
@@ -1,87 +1,84 @@
-# Production Environment Configuration
-# This file contains environment variables for production
-# ⚠️  NEVER commit this file with real production values!
+# Production Environment Configuration for monorepo.sucify.com
+# This file contains environment variables for production deployment
 
 # Node Environment
 NODE_ENV=production
 
-# Frontend URLs
-NEXT_PUBLIC_WEB_APP_URL=https://yourdomain.com
-NEXT_PUBLIC_ADMIN_APP_URL=https://admin.yourdomain.com
+# Domain Configuration
+DOMAIN=monorepo.sucify.com
+BASE_URL=https://monorepo.sucify.com
 
-# Service URLs
-AUTH_SERVICE_URL=https://auth.yourdomain.com
-PAYMENT_SERVICE_URL=https://payment.yourdomain.com
-ANALYTICS_SERVICE_URL=https://analytics.yourdomain.com
-AI_SERVICE_URL=https://ai.yourdomain.com
-PDF_SERVICE_URL=https://pdf.yourdomain.com
+# Frontend URLs
+NEXT_PUBLIC_WEB_APP_URL=https://monorepo.sucify.com
+NEXT_PUBLIC_ADMIN_APP_URL=https://admin.monorepo.sucify.com
+
+# Service URLs (Internal)
+AUTH_SERVICE_URL=http://auth-service:3002
+PAYMENT_SERVICE_URL=http://payment-service:8080
+ANALYTICS_SERVICE_URL=http://analytics-service:8081
+AI_SERVICE_URL=http://ai-service:8082
+PDF_SERVICE_URL=http://pdf-service:8083
 
 # Frontend Service URLs (for API calls)
-NEXT_PUBLIC_AUTH_SERVICE_URL=https://auth.yourdomain.com
-NEXT_PUBLIC_PAYMENT_SERVICE_URL=https://payment.yourdomain.com
-NEXT_PUBLIC_ANALYTICS_SERVICE_URL=https://analytics.yourdomain.com
-NEXT_PUBLIC_AI_SERVICE_URL=https://ai.yourdomain.com
-NEXT_PUBLIC_PDF_SERVICE_URL=https://pdf.yourdomain.com
+NEXT_PUBLIC_AUTH_SERVICE_URL=https://api.monorepo.sucify.com/auth
+NEXT_PUBLIC_PAYMENT_SERVICE_URL=https://api.monorepo.sucify.com/payment
+NEXT_PUBLIC_ANALYTICS_SERVICE_URL=https://api.monorepo.sucify.com/analytics
+NEXT_PUBLIC_AI_SERVICE_URL=https://api.monorepo.sucify.com/ai
+NEXT_PUBLIC_PDF_SERVICE_URL=https://api.monorepo.sucify.com/pdf
 
 # Database Configuration
-DATABASE_URL=postgresql://prod_user:CHANGE_ME@prod-db.yourdomain.com:5432/monorepo_prod
-POSTGRES_HOST=prod-db.yourdomain.com
+DATABASE_URL=postgresql://user:password@postgres:5432/monorepo_prod
+POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=monorepo_prod
-POSTGRES_USER=prod_user
-POSTGRES_PASSWORD=CHANGE_ME
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
 
 # Redis Configuration
-REDIS_URL=redis://prod-redis.yourdomain.com:6379
-REDIS_HOST=prod-redis.yourdomain.com
+REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 # JWT Configuration
-JWT_SECRET=CHANGE_ME_TO_SECURE_RANDOM_STRING
+JWT_SECRET=your_production_jwt_secret_key_change_this
 JWT_EXPIRES_IN=24h
 JWT_REFRESH_EXPIRES_IN=7d
 
-# API Keys (Production)
-STRIPE_SECRET_KEY=sk_live_CHANGE_ME
-STRIPE_PUBLISHABLE_KEY=pk_live_CHANGE_ME
-OPENAI_API_KEY=sk-CHANGE_ME
+# API Keys (Production - Replace with actual keys)
+STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key_here
+STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_publishable_key_here
+OPENAI_API_KEY=sk-your_openai_api_key_here
 
 # Logging
-LOG_LEVEL=warn
+LOG_LEVEL=info
 LOG_FORMAT=json
 
 # CORS Configuration
-CORS_ORIGIN=https://yourdomain.com,https://admin.yourdomain.com
+CORS_ORIGIN=https://monorepo.sucify.com,https://admin.monorepo.sucify.com
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=10000
+RATE_LIMIT_MAX_REQUESTS=1000
 
 # File Upload
 MAX_FILE_SIZE=10485760
-UPLOAD_PATH=/app/uploads
+UPLOAD_PATH=./uploads
 
 # Email Configuration (Production)
-SMTP_HOST=smtp.yourdomain.com
+SMTP_HOST=smtp.sucify.com
 SMTP_PORT=587
-SMTP_USER=noreply@yourdomain.com
-SMTP_PASS=CHANGE_ME
-EMAIL_FROM=noreply@yourdomain.com
+SMTP_USER=noreply@sucify.com
+SMTP_PASS=your_smtp_password
+EMAIL_FROM=noreply@sucify.com
 
 # Monitoring
 ENABLE_METRICS=true
 METRICS_PORT=9090
 
+# SSL Configuration
+SSL_CERT_PATH=/etc/ssl/certs/monorepo.sucify.com.crt
+SSL_KEY_PATH=/etc/ssl/private/monorepo.sucify.com.key
+
 # Security
-HELMET_ENABLED=true
-TRUST_PROXY=true
 SECURE_COOKIES=true
-
-# Performance
-ENABLE_COMPRESSION=true
-CACHE_TTL=3600
-
-# Backup
-BACKUP_ENABLED=true
-BACKUP_SCHEDULE=0 2 * * *
-BACKUP_RETENTION_DAYS=30
+TRUST_PROXY=true
