--- a/apps/backend/pdf-service/Dockerfile
+++ b/apps/backend/pdf-service/Dockerfile
@@ -9,7 +9,11 @@ RUN mvn dependency:go-offline -B
 
 # Copy source code and build
 COPY src ./src
-RUN mvn clean package -DskipTests
+RUN mvn clean package -DskipTests -X
+
+# Check if JAR was created
+RUN ls -la target/
+RUN find target/ -name "*.jar" -type f
 
 # Runtime stage
 FROM eclipse-temurin:17-jre
@@ -17,7 +21,7 @@ FROM eclipse-temurin:17-jre
 WORKDIR /app
 
 # Copy the built jar
-COPY --from=builder /app/target/pdf-service-1.0.0.jar app.jar
+COPY --from=builder /app/target/pdf-service-1.0.0.jar ./app.jar
 
 # Expose port
 EXPOSE 8083
