Clean up monorepo: remove redundant kubectl and minikube binaries

--- a/apps/backend/auth-service/Dockerfile
+++ b/apps/backend/auth-service/Dockerfile
@@ -3,13 +3,16 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Copy package files
-COPY apps/backend/auth-service/package.json ./
+# COPY apps/backend/auth-service/package.json ./
+COPY package.json ./
+COPY tsconfig.json ./
 
 # Install dependencies
 RUN npm install
 
 # Copy source code
-COPY apps/backend/auth-service/src ./src
+# COPY apps/backend/auth-service/src ./src
+COPY src ./src
 
 # Expose port
 EXPOSE 3002
