--- a/k8s/base/deployments/auth-deployment.yaml
+++ b/k8s/base/deployments/auth-deployment.yaml
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: auth-service
         image: monorepo-polyglot/auth-service:latest
+        imagePullPolicy: Never
         ports:
         - containerPort: 3002
         env:
