All services now build TypeScript to JavaScript and use pnpm consistently.

--- a/apps/backend/auth-service/Dockerfile
+++ b/apps/backend/auth-service/Dockerfile
@@ -2,20 +2,27 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Install pnpm
+RUN npm install -g pnpm
+
 # Copy package files
-# COPY apps/backend/auth-service/package.json ./
-COPY package.json ./
-COPY tsconfig.json ./
+COPY apps/backend/auth-service/package.json ./
+COPY apps/backend/auth-service/tsconfig.json ./
 
 # Install dependencies
-RUN npm install
+RUN pnpm install
 
 # Copy source code
-# COPY apps/backend/auth-service/src ./src
-COPY src ./src
+COPY apps/backend/auth-service/src ./src
+
+# Create dist directory and set permissions
+RUN mkdir -p dist && chown -R node:node /app
+
+# Build TypeScript to JavaScript
+RUN pnpm run build
 
 # Expose port
 EXPOSE 3002
 
-# Start the application with ts-node
-CMD ["npx", "ts-node", "src/main.ts"]
+# Start the application with compiled JavaScript
+CMD ["pnpm", "start"]
