--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build": "nx run-many --target=build --all",
     "build:frontend": "nx run-many --target=build --projects=web,admin",
     "build:backend": "nx run-many --target=build --projects=auth-service",
+    "start:web": "nx serve web --prod",
+    "start:admin": "nx serve admin --prod",
+    "start:auth": "nx serve auth-service --prod",
     "test": "nx run-many --target=test --all",
     "test:frontend": "nx run-many --target=test --projects=web,admin",
     "test:backend": "nx run-many --target=test --projects=auth-service",
