--- a/apps/frontend/web/.eslintrc.json
+++ b/apps/frontend/web/.eslintrc.json
@@ -1,8 +1,6 @@
 {
-  "extends": ["../../.eslintrc.json"],
-  "rules": {
-    "@monorepo-polyglot/project-boundaries": "error"
-  },
+  "extends": ["../../../.eslintrc.json"],
+  "rules": {},
   "overrides": [
     {
       "files": ["**/*.ts", "**/*.tsx"],
