--- a/libs/types/project.json
+++ b/libs/types/project.json
@@ -1,9 +1,21 @@
 {
   "name": "types",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/types/src",
+  "sourceRoot": "libs/types/src",
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project types --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/esbuild:esbuild",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/libs/types",
+        "main": "libs/types/src/index.ts",
+        "tsConfig": "libs/types/tsconfig.lib.json",
+        "assets": [],
+        "format": ["cjs", "esm"]
+      }
+    }
+  }
 }
