--- a/libs/ui-components/project.json
+++ b/libs/ui-components/project.json
@@ -1,9 +1,22 @@
 {
   "name": "ui-components",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/ui-components/src",
+  "sourceRoot": "libs/ui-components/src",
   "projectType": "library",
   "tags": [],
   "// targets": "to see all targets run: nx show project ui-components --web",
-  "targets": {}
+  "targets": {
+    "build": {
+      "executor": "@nx/esbuild:esbuild",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputPath": "dist/libs/ui-components",
+        "main": "libs/ui-components/src/index.ts",
+        "tsConfig": "libs/ui-components/tsconfig.lib.json",
+        "assets": [],
+        "format": ["cjs", "esm"],
+        "external": ["react", "react-dom"]
+      }
+    }
+  }
 }
