--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "docker:up": "docker compose up --build",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
-
     "clean": "nx reset && rm -rf node_modules && pnpm install",
     "build:all": "./tools/scripts/build-all.sh",
     "clean:all": "./tools/scripts/clean.sh",
@@ -86,9 +85,10 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "~15.2.4",
-    "zod": "^3.22.0",
+    "opossum": "^9.0.0",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -115,20 +115,23 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "20.19.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "babel-jest": "^30.0.2",
     "concurrently": "^9.2.1",
     "cypress": "^14.2.1",
     "esbuild": "^0.19.2",
-    "eslint": "^9.8.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^15.2.4",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-cypress": "^3.5.0",
     "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-json": "^4.0.1",
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
