--- a/apps/backend/auth-service/Dockerfile
+++ b/apps/backend/auth-service/Dockerfile
@@ -1,28 +1,41 @@
-FROM node:18-alpine
+# Multi-stage build for optimized auth service
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-# Install pnpm
+# Copy root package files
+COPY package*.json ./
+COPY pnpm-lock.yaml ./
+COPY nx.json ./
+COPY tsconfig.base.json ./
+
+# Install pnpm and dependencies
 RUN npm install -g pnpm
-
-# Copy package files
-COPY apps/backend/auth-service/package.json ./
-COPY apps/backend/auth-service/tsconfig.json ./
-
-# Install dependencies
 RUN pnpm install
 
-# Copy source code
-COPY apps/backend/auth-service/src ./src
+# Copy only auth service and shared libraries
+COPY apps/backend/auth-service ./apps/backend/auth-service
+COPY libs ./libs
 
-# Create dist directory and set permissions
-RUN mkdir -p dist && chown -R node:node /app
+# Build only the auth service using individual build command
+RUN pnpm build:auth
 
-# Build TypeScript to JavaScript
-RUN pnpm run build
+# Production stage
+FROM node:18-alpine AS runner
+
+WORKDIR /app
+
+# Install pnpm for production
+RUN npm install -g pnpm
+
+# Copy only the built application and necessary files
+COPY --from=builder /app/dist/auth-service ./dist/auth-service
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package*.json ./
 
 # Expose port
 EXPOSE 3002
 
-# Start the application with compiled JavaScript
-CMD ["pnpm", "start"]
+# Start the production server
+WORKDIR /app/dist/auth-service
+CMD ["node", "main.js"]
