--- a/apps/frontend/admin/Dockerfile
+++ b/apps/frontend/admin/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:18-alpine
+# Multi-stage build for optimized admin app
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
@@ -12,12 +13,25 @@ COPY tsconfig.base.json ./
 RUN npm install -g pnpm
 RUN pnpm install
 
-# Copy source code
+# Copy only admin app and shared libraries
 COPY apps/frontend/admin ./apps/frontend/admin
 COPY libs ./libs
 
-# Build the admin application
-RUN pnpm build:frontend
+# Build only the admin application using individual build command
+RUN pnpm build:admin
+
+# Production stage
+FROM node:18-alpine AS runner
+
+WORKDIR /app
+
+# Install pnpm for production
+RUN npm install -g pnpm
+
+# Copy only the built application and necessary files
+COPY --from=builder /app/dist/apps/frontend/admin ./dist/apps/frontend/admin
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/package*.json ./
 
 # Expose port
 EXPOSE 3001
