--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
     "build": "nx run-many --target=build --all",
     "build:frontend": "nx run-many --target=build --projects=web,admin",
     "build:backend": "nx run-many --target=build --projects=auth-service",
+    "build:web": "nx build web --prod",
+    "build:admin": "nx build admin --prod",
+    "build:auth": "nx build auth-service --prod",
+    "build:payment": "cd apps/backend/payment-service && go build -o main .",
+    "build:analytics": "cd apps/backend/analytics-service && cargo build --release",
+    "build:ai": "cd apps/backend/ai-service && uv build",
+    "build:pdf": "cd apps/backend/pdf-service && mvn clean package -DskipTests",
     "start:web": "nx serve web --prod",
     "start:admin": "nx serve admin --prod",
     "start:auth": "nx serve auth-service --prod",
+    "start:payment": "cd apps/backend/payment-service && ./main",
+    "start:analytics": "cd apps/backend/analytics-service && ./target/release/analytics-service",
+    "start:ai": "cd apps/backend/ai-service && uv run python src/ai_service_python/main.py",
+    "start:pdf": "cd apps/backend/pdf-service && java -jar target/pdf-service-*.jar",
     "test": "nx run-many --target=test --all",
     "test:frontend": "nx run-many --target=test --projects=web,admin",
     "test:backend": "nx run-many --target=test --projects=auth-service",
@@ -24,6 +35,14 @@
     "docker:up": "docker compose up --build",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
+    "docker:build:web": "docker build -f apps/frontend/web/Dockerfile -t monorepo-web .",
+    "docker:build:admin": "docker build -f apps/frontend/admin/Dockerfile -t monorepo-admin .",
+    "docker:build:auth": "docker build -f apps/backend/auth-service/Dockerfile -t monorepo-auth .",
+    "docker:build:payment": "docker build -f apps/backend/payment-service/Dockerfile -t monorepo-payment ./apps/backend/payment-service",
+    "docker:build:analytics": "docker build -f apps/backend/analytics-service/Dockerfile -t monorepo-analytics ./apps/backend/analytics-service",
+    "docker:build:ai": "docker build -f apps/backend/ai-service/Dockerfile -t monorepo-ai ./apps/backend/ai-service",
+    "docker:build:pdf": "docker build -f apps/backend/pdf-service/Dockerfile -t monorepo-pdf ./apps/backend/pdf-service",
+    "docker:build:all": "pnpm docker:build:web && pnpm docker:build:admin && pnpm docker:build:auth && pnpm docker:build:payment && pnpm docker:build:analytics && pnpm docker:build:ai && pnpm docker:build:pdf",
     "clean": "nx reset && rm -rf node_modules && pnpm install",
     "build:all": "./tools/scripts/build-all.sh",
     "clean:all": "./tools/scripts/clean.sh",
